# FastAI

./: .dockerignore  .env.example  .gitignore  alembic.ini  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 20261127_0001_initial_storage_schema.py
compose/: docker-compose.yml
docker/app/: Dockerfile
scripts/: lint.ps1  migrate.ps1  test.ps1  typecheck.ps1
specs/: agent.md  api-contract.yaml  ci-gates.md  config-examples.md  design-doc.md  env-contract.md  execution-checklist.md  fixtures-spec.md  git-commit-guidelines.md  integration-modes.md  project-structure.md  requirements.md  tasks.md  tech-stack.md
src/fastai/: __init__.py  ai_app.py  client.py  context_builder.py  generation.py  plugin.py  prompting.py  retrieval.py  sdk.py
src/fastai/app/: __init__.py  errors.py  ingestion_watcher.py  lifecycle.py  main.py  middleware.py  settings.py
src/fastai/config/: __init__.py  defaults.py  env.py  helpers.py  overrides.py  resolver.py  types.py
src/fastai/ingestion/: __init__.py  chunking.py  discovery.py  (+3 more)
tests/unit/: test_aiapp_public_api.py  test_bootstrap.py  test_context_builder.py  test_generation.py  test_ingestion_chunking.py  test_ingestion_discovery.py  test_ingestion_embeddings.py  test_ingestion_extraction.py  test_ingestion_pipeline.py  test_ingestion_watcher.py  test_library_integration.py  test_prompting.py  test_retrieval.py  test_router_plugin_integration.py  test_sdk_facade.py  test_sidecar_integration.py  test_storage_contracts.py  test_storage_repositories.py  test_storage_schema_models.py  test_vector_adapters.py
(+12 files in other folders)
